Fixing overflow problem on the about page, SCSS-wise. Lines up with previous commits fixing panels.

--- a/sites/all/themes/campsite/sass/partials/_panels.scss
+++ b/sites/all/themes/campsite/sass/partials/_panels.scss
@@ -672,11 +672,6 @@ ul.primary.tabs{
   @extend %center-styled-pane-title;
   @extend %center-styled-pane-content;
   background-color: #000;
-  margin-left: -50%;
-  padding-left: 50%;
-  margin-right: -50%;
-  padding-right: 50%;
-
 
   .pane-title {
     color: #7EBFD6;
@@ -693,91 +688,6 @@ ul.primary.tabs{
 }
 
 /* END PLUGIN PANE STYLES -------------------*/
-
-// Main About header
-.panel-pane.about-header h2 {
-  color: white;
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.panel-pane.about-header .pane-content:after {
-  display: block;
-  content: "";
-  width: 100%;
-  min-height: 307px;
-  background: url('../images/about1.jpg') no-repeat top center;
-  @extend .pane-full-width-content;
-  // @media screen and (min-width: 1500px) {
-  //  background-size: 100%;
-  //  height: auto;
-  // }
-}
-
-// pane-venue-location Images
-.panel-pane.pane-venue-location > .pane-content:after {
-  display: block;
-  content: "";
-  width: 100%;
-  min-height: 369px;
-  background: url('../images/about2.jpg') no-repeat top center;
-  @extend .pane-full-width-content;
-  // @media screen and (min-width: 1500px) {
-  //  background-size: 100%;
-  //  height: auto;
-  // }
-}
-
-
-.about-facts {
-  background-image: url(../images/bg-facts.jpg);
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  padding-bottom: 3em;
-
-  .pane-title {
-    margin-bottom: 1em;
-    color: white;
-  }
-
-  .fact-one,
-  .fact-two,
-  .fact-three {
-    color: #FFF;
-    h3 { 
-      font-size: 76px;
-      line-height: 1em;
-      color: #FFF;
-    }
-  }
-
-  .fact-one:before {
-    content: "Connect";
-  }
-  .fact-two:before {
-    content: "Learn";
-  }
-  .fact-three:before {
-    content: "Inspire";
-  }
-
-
-
-  @media screen and (min-width: 768px) {
-    .fact-one,
-    .fact-two,
-    .fact-three {
-      width: 33.33333%;
-      float: left;
-    }
-  }
-
-
-  @media screen and (min-width: 1500px) {
-    background-size: 100%;
-  }
-}
-
-
 
 // Footer
 .region-footer {
